--- a/page.css
+++ b/page.css
@@ -31,12 +31,12 @@
     --sidebar-height: 100%;
     --sidebar-overflow: hidden;
     /* colors */
-    --content-bg-color: #33254e;
-    --sidebar-bg-color: #33254e;
-    --footer-bg-color: #33254e;
-    --nav-bg-color: #291e3e;
-    --container-bg-color: #b37be0e;
-    --background-color: #491e55;
+    --content-bg-color: #401111;
+    --sidebar-bg-color: #401111;
+    --footer-bg-color: #401111;
+    --nav-bg-color: #330303;
+    --container-bg-color: #e07b7b00;
+    --background-color: #4f1b1b;
 }
 
 html,
